--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,18 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 33              // Updated to a more recent SDK version
+    buildToolsVersion "33.0.0"
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 23
+        minSdkVersion 21              // Updated to a more recent minimum SDK version
+        targetSdkVersion 33           // Updated to match compile SDK
         versionCode 1
         versionName "1.0"
     }
 }
 
 dependencies {
-    compile 'com.google.zxing:core:3.2.1'
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.google.zxing:core:3.2.1'  // Replaced 'compile' with 'implementation'
+    implementation "com.facebook.react:react-native:0.71.0"  // Specify RN version instead of '+'
 }
